<resources>
    <string name="app_name">GACTelphoneDemo</string>
    <string name="model">模式</string>
    <string name="call">呼叫</string>
    <string name="paging">Paging</string>
    <string name="ip_call">IP呼叫</string>
    <string name="default_null"></string>
    <string name="accept">接听</string>
    <string name="reject">拒接</string>
    <string name="local_account">本地账号:</string>
    <string name="remote_num">来电号码:</string>
    <string name="call_num">拨打号码:</string>
    <string name="call_with">与%1$s通话中...</string>
    <string name="start_pause">开始暂停</string>
    <string name="stop_pause">停止暂停</string>

    <string name="hang_up">挂断</string>
    <string name="add_meeting">加入会议</string>
    <string name="start_record">开始录音</string>
    <string name="stop_record">结束录音</string>
    <string name="in_call">呼叫中....</string>
    <string name="calling">通话中....</string>
    <string name="transfer_phone">转移通话</string>
    <string name="call_failed">呼叫失败</string>
    <string name="call_busy">对方正忙</string>

    <string name="meeting_room">会议室</string>
    <string name="constact_people">联系人</string>
    <string name="history_people">通话记录</string>
    <string name="more_btn_text">更多</string>
    <string name="end_btn_text">结束</string>
    <string name="transfering">转移通话中。。。</string>
    <string name="end_meeting">结束会议</string>
    <string name="attention">注意</string>
    <string name="isEndConf">是否结束会议</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="call_state">通话状态</string>
    <string name="having_conf">您有一个会议正在进行</string>
    <string name="touch_return_call">触摸返回通话</string>
    <string name="phone_isnull">电话号码为空</string>
    <string name="most_member">您最多可以添加6个成员</string>
    <string name="change_account">选择账号</string>
    <string name="failed_mute">静音失败</string>

    <string name="group_people">组员:%1$s</string>
    <string name="peoplename">姓名：%1$s</string>
    <string name="peoplephone">号码：%1$s</string>
    <string name="account">账号%1$d</string>

    <string name="meeingname">会议名</string>
    <string name="meetingmember">会议成员</string>
    <string name="loopmeeting">循环会议</string>
    <string name="meetingdata">会议日期</string>
    <string name="timezone">时区</string>
    <string name="starttime">开始时间</string>
    <string name="timelong">时长(分)</string>
    <string name="meetingremind">会议提醒</string>
    <string name="automeeting">自动会议</string>
    <string name="autoaccept">自动接听成员来电</string>
    <string name="nosound">入会时禁声</string>
    <string name="addlock">加锁</string>
    <string name="password">密码</string>
    <string name="autorecord">自动录音</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="people_total">%d/64</string>
    <string name="charmore">字符超过长度</string>
    <string name="numberhint">0至10位数字</string>
    <string name="complate">完成</string>
    <string name="default_minutes">30</string>
    <string name="meeting_member">会议成员</string>
    <string name="meeting_time">会议时间</string>

    <string name="advence">提前%d分钟</string>
    <string name="nothing">无</string>
    <string name="appointment">预约会议</string>
    <string name="no_meetingname">会议名称不能为空</string>
    <string name="no_meetingmember">会议成员不能为空</string>
    <string name="longtime_error">时长格式不对</string>

    <string name="time_format">%1$d年%2$d月%3$d日%4$s-%5$s</string>
    <string name="start">开始</string>
    <string name="meeting_long">时长</string>
    <string name="minute">%d 分</string>
    <string name="miss_meeting">错过会议</string>
    <string name="close_meeting">会议已关闭</string>

    <string name="start_mute">开始静音</string>
    <string name="stop_mute">停止静音</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="verifing">验证中....</string>
</resources>
