<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:id="@+id/layout_body">
    <LinearLayout
        android:layout_width="match_parent" android:layout_weight="1"
        android:layout_height="0dp" android:orientation="horizontal">
        <TextView
            android:layout_width="0dp" android:text="@string/model"
            android:layout_height="match_parent" android:gravity="center"
            android:layout_weight="2" />
        <Button
            android:id="@+id/model_btn" android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="3"
            android:layout_margin="@dimen/model_btn_margin" android:text="@string/call"
            android:background="@drawable/drop_down_box_bg"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent" android:layout_weight="3"
        android:layout_height="0dp">
        <LinearLayout
            android:id="@+id/account_layout" android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical"/>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent" android:layout_weight="1"
        android:layout_height="0dp" android:background="@drawable/modelbtn_bg"
        android:clickable="true" android:layout_margin="@dimen/model_appointpadding"
        android:id="@+id/schedule_layout">
        <ImageView
            android:id="@+id/appoint_icon" android:layout_width="wrap_content"
            android:layout_height="match_parent" android:src="@mipmap/ic_schedule"
            android:layout_margin="@dimen/model_appointpadding"/>
        <TextView
            android:layout_width="wrap_content" android:text="@string/appointment"
            android:layout_height="wrap_content" android:layout_toRightOf="@id/appoint_icon"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</LinearLayout>
