<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="@dimen/actionBar_height" android:layout_marginLeft="@dimen/addmeeting_paddingleft"
        android:gravity="center_vertical" android:layout_marginTop="@dimen/stroken_height"
        android:paddingRight="@dimen/addmeeting_paddingleft">
        <TextView
            android:layout_width="0dp" android:text="@string/timezone"
            android:layout_height="wrap_content" android:layout_weight="1"/>
        <Button
            android:id="@+id/addmeeing_timezone" android:layout_width="0dp"
            android:layout_height="@dimen/data_edit_height" android:layout_weight="1"
            android:background="@mipmap/spinner_default" android:gravity="left|center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" android:background="@color/stroken_color"
        android:layout_height="@dimen/stroken_height" />

    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="@dimen/actionBar_height" android:layout_marginLeft="@dimen/addmeeting_paddingleft"
        android:gravity="center_vertical" android:paddingRight="@dimen/addmeeting_paddingleft">
        <TextView
            android:layout_width="0dp" android:text="@string/starttime"
            android:layout_height="wrap_content" android:layout_weight="1"/>
        <Button
            android:id="@+id/addmeeing_starttime" android:layout_width="0dp"
            android:layout_height="@dimen/data_edit_height" android:layout_weight="1"
            android:background="@mipmap/spinner_default" android:gravity="left|center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" android:background="@color/stroken_color"
        android:layout_height="@dimen/stroken_height" />

    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="@dimen/actionBar_height" android:layout_marginLeft="@dimen/addmeeting_paddingleft"
        android:gravity="center_vertical" android:paddingRight="@dimen/addmeeting_paddingleft">
        <TextView
            android:layout_width="0dp" android:text="@string/timelong"
            android:layout_height="wrap_content" android:layout_weight="1"/>
        <EditText
            android:id="@+id/addmeeing_timelong" android:layout_width="0dp"
            android:layout_height="@dimen/data_edit_height" android:layout_weight="1"
            android:background="@drawable/add_edit_bg"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent" android:background="@color/stroken_color"
        android:layout_height="@dimen/stroken_height" />

    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="@dimen/actionBar_height" android:layout_marginLeft="@dimen/addmeeting_paddingleft"
        android:gravity="center_vertical" android:paddingRight="@dimen/addmeeting_paddingleft">
        <TextView
            android:layout_width="0dp" android:text="@string/meetingremind"
            android:layout_height="wrap_content" android:layout_weight="1"/>
        <Button
            android:id="@+id/addmeeing_remind" android:layout_width="0dp"
            android:layout_height="@dimen/data_edit_height" android:layout_weight="1"
            android:background="@mipmap/spinner_default" android:gravity="center_vertical|left"/>
    </LinearLayout>


</LinearLayout>
