<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="@dimen/change_contact_height" android:background="@color/blue">
        <ImageView
            android:id="@+id/contact_back_icon" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@mipmap/backbutton_cl"
            android:layout_centerVertical="true" android:layout_margin="@dimen/contact_title_padding" />
        <ImageView
            android:id="@+id/contact_sure_icon" android:layout_width="@dimen/change_contact_height"
            android:layout_height="@dimen/change_contact_height" android:src="@mipmap/check_box_off_pressed"
            android:layout_alignParentRight="true" android:background="@color/dark_blue"/>
        <Button
            android:id="@+id/contactchange_account_btn" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:background="@mipmap/spinner_default"
            android:layout_toLeftOf="@id/contact_sure_icon" android:layout_margin="@dimen/contact_title_padding"/>
        <EditText
            android:id="@+id/contactchange_edit" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:background="@drawable/select_account_bg"
            android:layout_toRightOf="@id/contact_back_icon" android:layout_toLeftOf="@id/contactchange_account_btn"
            android:layout_alignBottom="@id/contactchange_account_btn" android:layout_alignTop="@id/contactchange_account_btn"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/most_member" android:background="@color/stroken_color"
        android:paddingLeft="@dimen/contact_title_padding"/>
    <LinearLayout
        android:id="@+id/extend_layout" android:layout_width="match_parent"
        android:layout_height="@dimen/change_contact_height" android:orientation="horizontal"
        android:clickable="true" android:background="@drawable/layout_bg">
        <ImageView
            android:id="@+id/open_extend" android:layout_width="@dimen/contact_icon_dimen"
            android:layout_height="@dimen/contact_icon_dimen" android:src="@mipmap/right"
            android:layout_gravity="center_vertical" android:layout_margin="@dimen/contact_title_padding" />
        <TextView
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:text="@string/constact_people" android:layout_gravity="center_vertical"
            android:layout_weight="5"/>
        <TextView
            android:id="@+id/group_people" android:layout_width="0dp"
            android:text="@string/group_people" android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" android:layout_weight="2" />
    </LinearLayout>
    <ListView
        android:id="@+id/change_listview" android:layout_width="match_parent"
        android:layout_height="match_parent" android:visibility="gone"/>

</LinearLayout>
